Z1| Add GetById and Delete swagger annotations
